--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^11.8.1",
     "react": "^19.1.0",
     "react-awesome-reveal": "^4.3.1",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-helmet": "^6.1.0",
