--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.9.0",
     "daisyui": "^5.0.43",
     "firebase": "^11.8.1",
+    "motion": "^12.22.0",
     "react": "^19.1.0",
     "react-awesome-reveal": "^4.3.1",
     "react-countdown-circle-timer": "^3.2.1",
